# CSRankings-query

./: .gitignore  README.md  csrankings_query.py  pyproject.toml
